# PQC-app

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  kyber_bridge.c
android/app/src/main/kotlin/com/example/qguard/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/loginpage/: auth_gate.dart  background_widget.dart  chat_services.dart  chatpage.dart  colors.txt  drawer.dart  homepage.dart  kyber_key_service.dart  loginpage.dart  settings.dart  signinpage.dart  usertile.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
